create a div-generating button

--- a/index.html
+++ b/index.html
@@ -2,9 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <script src="jquery.js" charset="utf-8"></script>
+    <script src="client.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Code Challenge 1</title>
   </head>
   <body>
+    <h1>Coding Challenge 1</h1>
+    <div id = 'btn'>
+    </div>
 
   </body>
 </html>
